--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@types/react-dom": "18.2.4",
     "eslint": "^8.40.0",
     "eslint-config-next": "13.4.2",
-    "modern-css-reset": "^1.4.0",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "ress": "^5.0.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
